--- a/MODULO_08/ProjetoFinal-Credito.ipynb
+++ b/MODULO_08/ProjetoFinal-Credito.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,11 +13,96 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "df = pd.read_csv('.\\input\\SQL_M8_support material_exercise_credit.csv',names=['idade', 'sexo', 'dependentes', 'escolaridade', 'estado_civil', 'salario_anual', 'tipo_cartao', 'qtd_produtos', 'iteracoes_12m', 'meses_inativo_12m', 'limite_credito', 'valor_transacoes_12m', 'qtd_transacoes_12m'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>limite_credito</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sexo</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>F</th>\n",
+       "      <td>5748.98</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>M</th>\n",
+       "      <td>11201.36</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      limite_credito\n",
+       "sexo                \n",
+       "F            5748.98\n",
+       "M           11201.36"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df[['limite_credito', 'sexo']].groupby('sexo').mean().round(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (2515433901.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  Cell \u001b[1;32mIn[65], line 1\u001b[1;36m\u001b[0m\n\u001b[1;33m    ax = sns.barplot(data=df[['limite_credito', 'sexo']].map(['sexo': {'F': 'Feminino', 'M': 'Masculino'}]).groupby('sexo').mean().round(2), y='limite_credito', hue='sexo')\u001b[0m\n\u001b[1;37m                                                                    ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "ax = sns.barplot(data=df[['limite_credito', 'sexo']].map('sexo': {'F': 'Feminino', 'M': 'Masculino'}).groupby('sexo').mean().round(2), y='limite_credito', hue='sexo')\n",
+    "\n",
+    "for p in ax.patches:\n",
+    "        ax.annotate(f'{int(p.get_height())}', (p.get_x() + p.get_width() / 2., p.get_height() - 100),\n",
+    "                ha='center', va='baseline', fontsize=11, color='black', xytext=(0, 5),\n",
+    "                textcoords='offset points', rotation=0)"
    ]
   },
   {
@@ -283,8 +368,38 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### **Limite de Crédito em relação ao Sexo:**\n",
+    "\n",
+    "```sql\n",
+    "SELECT sexo,\n",
+    "\tsalario_anual,\n",
+    "\tCOUNT(sexo) AS Quantidade\n",
+    "FROM credito\n",
+    "WHERE salario_anual != 'na'\n",
+    "GROUP BY sexo, salario_anual\n",
+    "ORDER BY Quantidade DESC;\n",
+    "```\n",
+    "\n",
+    "![salarioAnualSexoQuant](https://github.com/marceloaires7/EBAC-SQL/blob/main/MODULO_08/images/salarioAnualSexoQuant.png?raw=true)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### **Salário Anual em relação ao Sexo:**\n",
-    "\n"
+    "\n",
+    "```sql\n",
+    "SELECT sexo,\n",
+    "\tsalario_anual,\n",
+    "\tCOUNT(sexo) AS Quantidade\n",
+    "FROM credito\n",
+    "WHERE salario_anual != 'na'\n",
+    "GROUP BY sexo, salario_anual\n",
+    "ORDER BY Quantidade DESC;\n",
+    "```\n",
+    "\n",
+    "![salarioAnualSexoQuant](https://github.com/marceloaires7/EBAC-SQL/blob/main/MODULO_08/images/salarioAnualSexoQuant.png?raw=true)"
    ]
   }
  ],
@@ -304,7 +419,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
