--- a/MODULO_08/ProjetoFinal-Credito.ipynb
+++ b/MODULO_08/ProjetoFinal-Credito.ipynb
@@ -394,7 +394,9 @@
     "ORDER BY Quantidade DESC;\n",
     "```\n",
     "\n",
-    "![salarioAnualSexoQuant](https://github.com/marceloaires7/EBAC-SQL/blob/main/MODULO_08/images/salarioAnualSexoQuant.png?raw=true)"
+    "![mediaLimiteCreditoSexo](https://github.com/marceloaires7/EBAC-SQL/blob/1470f0db41e73577639801ba8b4e7461cbe3331f/MODULO_08/images/mediaLimiteCreditoSexo.png)\n",
+    "\n",
+    "![grafMediaLimiteCreditoSexo](https://github.com/marceloaires7/EBAC-SQL/blob/1470f0db41e73577639801ba8b4e7461cbe3331f/MODULO_08/images/grafMediaLimiteCreditoSexo.png)"
    ]
   },
   {
