--- a/MODULO_08/ProjetoFinal-Credito.ipynb
+++ b/MODULO_08/ProjetoFinal-Credito.ipynb
@@ -315,25 +315,45 @@
     "#### 3.5. QUERY 2:\n",
     "\n",
     "```sql\n",
-    "SELECT idade,                COUNT(idade)                AS Quantidade FROM credito GROUP BY idade;\n",
-    "SELECT sexo,                 COUNT(sexo)                 AS Quantidade FROM credito GROUP BY sexo;\n",
-    "SELECT dependentes,          COUNT(dependentes)          AS Quantidade FROM credito GROUP BY dependentes;\n",
-    "SELECT escolaridade,         COUNT(escolaridade)         AS Quantidade FROM credito GROUP BY escolaridade;\n",
-    "SELECT estado_civil,         COUNT(estado_civil)         AS Quantidade FROM credito GROUP BY estado_civil;\n",
-    "SELECT salario_anual,        COUNT(salario_anual)        AS Quantidade FROM credito GROUP BY salario_anual;\n",
-    "SELECT tipo_cartao,          COUNT(tipo_cartao)          AS Quantidade FROM credito GROUP BY tipo_cartao;\n",
-    "SELECT qtd_produtos,         COUNT(qtd_produtos)         AS Quantidade FROM credito GROUP BY qtd_produtos;\n",
-    "SELECT iteracoes_12m,        COUNT(iteracoes_12m)        AS Quantidade FROM credito GROUP BY iteracoes_12m;\n",
-    "SELECT meses_inativo_12m,    COUNT(meses_inativo_12m)    AS Quantidade FROM credito GROUP BY meses_inativo_12m;\n",
-    "SELECT limite_credito,       COUNT(limite_credito)       AS Quantidade FROM credito GROUP BY limite_credito;\n",
-    "SELECT valor_transacoes_12m, COUNT(valor_transacoes_12m) AS Quantidade FROM credito GROUP BY valor_transacoes_12m;\n",
-    "SELECT qtd_transacoes_12m,   COUNT(qtd_transacoes_12m)   AS Quantidade FROM credito GROUP BY qtd_transacoes_12m;\n",
+    "SELECT idade, COUNT(idade) AS Quantidade FROM credito GROUP BY idade;\n",
+    "SELECT sexo, COUNT(sexo) AS Quantidade FROM credito GROUP BY sexo;\n",
     "```\n",
-    "![escolaridadeNA](https://github.com/marceloaires7/EBAC-SQL/blob/main/MODULO_08/images/escolaridadeNA.png?raw=true)\n",
-    "![estadoCivilNA](https://github.com/marceloaires7/EBAC-SQL/blob/main/MODULO_08/images/estadoCivilNA.png?raw=true)\n",
-    "![salarioAnualNA](https://github.com/marceloaires7/EBAC-SQL/blob/main/MODULO_08/images/salarioAnualNA.png?raw=true)\n",
+    "\n",
     "![sexoQuant](https://github.com/marceloaires7/EBAC-SQL/blob/main/MODULO_08/images/sexoQuant.png?raw=true)\n",
+    "\n",
+    "``` sql\n",
+    "SELECT dependentes, COUNT(dependentes) AS Quantidade FROM credito GROUP BY dependentes;\n",
+    "SELECT escolaridade, COUNT(escolaridade) AS Quantidade FROM credito GROUP BY escolaridade;\n",
+    "```\n",
+    "\n",
+    "![escolaridadeNA](https://github.com/marceloaires7/EBAC-SQL/blob/main/MODULO_08/images/escolaridadeNA.png?raw=true)\n",
+    "\n",
+    "``` sql\n",
+    "SELECT estado_civil, COUNT(estado_civil) AS Quantidade FROM credito GROUP BY estado_civil;\n",
+    "```\n",
+    "\n",
+    "![estadoCivilNA](https://github.com/marceloaires7/EBAC-SQL/blob/main/MODULO_08/images/estadoCivilNA.png?raw=true)\n",
+    "\n",
+    "``` sql\n",
+    "SELECT salario_anual, COUNT(salario_anual) AS Quantidade FROM credito GROUP BY salario_anual;\n",
+    "```\n",
+    "\n",
+    "![salarioAnualNA](https://github.com/marceloaires7/EBAC-SQL/blob/main/MODULO_08/images/salarioAnualNA.png?raw=true)\n",
+    "\n",
+    "``` sql\n",
+    "SELECT tipo_cartao, COUNT(tipo_cartao) AS Quantidade FROM credito GROUP BY tipo_cartao;\n",
+    "```\n",
+    "\n",
     "![tiposCartaoQuant](https://github.com/marceloaires7/EBAC-SQL/blob/main/MODULO_08/images/tiposCartaoQuant.png?raw=true)\n",
+    "\n",
+    "``` sql\n",
+    "SELECT qtd_produtos, COUNT(qtd_produtos) AS Quantidade FROM credito GROUP BY qtd_produtos;\n",
+    "SELECT iteracoes_12m, COUNT(iteracoes_12m) AS Quantidade FROM credito GROUP BY iteracoes_12m;\n",
+    "SELECT meses_inativo_12m, COUNT(meses_inativo_12m) AS Quantidade FROM credito GROUP BY meses_inativo_12m;\n",
+    "SELECT limite_credito, COUNT(limite_credito) AS Quantidade FROM credito GROUP BY limite_credito;\n",
+    "SELECT valor_transacoes_12m, COUNT(valor_transacoes_12m) AS Quantidade FROM credito GROUP BY valor_transacoes_12m;\n",
+    "SELECT qtd_transacoes_12m, COUNT(qtd_transacoes_12m) AS Quantidade FROM credito GROUP BY qtd_transacoes_12m;\n",
+    "```\n",
     "\n",
     "> Analisando cada uma das colunas, percebemos aonde estão os valores nulos, como mostra nas figuras acima.\n",
     "\n",
