Projeto Final - Finalizado

--- a/MODULO_08/ProjetoFinal-Credito.ipynb
+++ b/MODULO_08/ProjetoFinal-Credito.ipynb
@@ -292,7 +292,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### **4.3. Análise de Escolaridade (sem NA):**\n",
+    "#### **4.3. Análise de Escolaridade:**\n",
     "```sql\n",
     "SELECT escolaridade,\n",
     "\tCOUNT(*) AS Quantidade\n",
@@ -302,9 +302,50 @@
     "ORDER BY Quantidade DESC;\n",
     "```\n",
     "![escolaridadeQuant](https://github.com/marceloaires7/EBAC-SQL/blob/main/MODULO_08/images/escolaridadeQuant.png?raw=true)\n",
-    "![graficoEscolaridadeQuant](https://github.com/marceloaires7/EBAC-SQL/blob/main/MODULO_08/images/graficoEscolaridadeQuant.png?raw=true)\n",
+    "![graficoEscolaridadeQuant](https://github.com/marceloaires7/EBAC-SQL/blob/29691defefa366b771c212e08ff9cb72c4b545c1/MODULO_08/images/graficoEscolaridadeQuant.png?raw=true)\n",
     "\n",
-    "> Vemos que o número de homens é superior ao número de mulheres. Vamos nos aprofundar nas etapas seguintes."
+    "> Existem mais clientes com 'mestrado', seguidos por 'ensino medio', 'sem educacao formal', 'graduacao' e 'doutorado'."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### **4.3.1. Média do Limite de Crédito em relação a Escolaridade:**\n",
+    "\n",
+    "```sql\n",
+    "SELECT AVG(limite_credito) AS Media_Limite_Credito,\n",
+    "\tescolaridade\n",
+    "FROM credito\n",
+    "WHERE escolaridade != 'na'\n",
+    "GROUP BY escolaridade\n",
+    "ORDER BY Media_Limite_Credito DESC\n",
+    "```\n",
+    "\n",
+    "![mediaEscolaridadeLimiteCredito](https://github.com/marceloaires7/EBAC-SQL/blob/main/MODULO_08/images/mediaEscolaridadeLimiteCredito.png?raw=true)\n",
+    "![graficoEscolaridadeLimiteCredito](https://github.com/marceloaires7/EBAC-SQL/blob/main/MODULO_08/images/graficoEscolaridadeLimiteCredito.png?raw=true)\n",
+    "\n",
+    "> A média dos limites de crédito não parece alterar de acordo com a escolaridade, todos tem um valor aproximado.\n",
+    "\n",
+    "---"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## **5. Conclusão:**\n",
+    "\n",
+    "Com este projeto podemos retirar algumas análises extraídas do dataset.\n",
+    "\n",
+    "- O DataSet é formado por 2564 linhas e 13 colunas.\n",
+    "- Das 13 colunas, 3 apresentam dados nulos ('escolaridade', 'estado_civil', 'salario_anual').\n",
+    "- O Limite de Crédito aumenta de acordo com o Salário Anual do Cliente.\n",
+    "- O DataSet apresenta mais clientes Homens do que Mulheres.\n",
+    "- O DataSet apresenta inconsistência em relação a coluna 'sexo', em que só foram inseridas mulheres de Renda Baixa.\n",
+    "- Existem mais clientes com 'mestrado', seguidos por 'ensino medio', 'sem educacao formal', 'graduacao' e 'doutorado'.\n",
+    "\n",
+    "Seria mais prudente buscar um dataset que apresente informações mais abrangentes e equilibradas. Poderíamos considerar realizar uma nova busca por dados ou procurar o dataset completo, focando em variáveis que proporcionem uma visão mais equitativa da situação."
    ]
   }
  ],
